--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
   --primary-white-color: #ffffff;
   --hero-bg-color: rgba(47, 48, 58, 0.4);
   --footer-color: rgba(255, 255, 255, 0.6);
+  --transition-color: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --transition-bg-color: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   /* grid-items */
 
@@ -116,19 +118,23 @@ p {
   letter-spacing: 0.28px;
 
   color: var(--title-text-color);
+
+  transition: var(--transition-color);
 }
 
 .site-link::after {
   position: absolute;
+  content: '';
   bottom: 0;
   left: 0;
   display: block;
-  content: '';
   width: 100%;
   height: 4px;
 
   border-radius: 2px;
-  background-color: hidden;
+  background-color: var(--primary-white-color);
+
+  transition: var(--transition-bg-color);
 }
 
 .site-link.current::after {
@@ -173,21 +179,20 @@ p {
   align-items: center;
 }
 
-.info-nav .link {
+.info-link {
+  display: flex;
+  align-items: center;
   font-size: 14px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.28px;
+
+  transition: var(--transition-color);
 }
 
-.info-nav .link:hover,
-.info-nav .link:focus {
+.info-link:hover,
+.info-link:focus {
   color: var(--accent-color);
-}
-
-.info-link {
-  display: flex;
-  align-items: center;
 }
 
 .info-icon {
@@ -440,6 +445,9 @@ p {
   background-color: var(--primary-white-color);
   color: #afb1b8;
   border-radius: 50%;
+
+  transition: var(--transition-color);
+  transition: var(--transition-bg-color);
 }
 
 .socials-icon {
@@ -470,13 +478,22 @@ p {
   align-items: center;
   border-radius: 4px;
   border: 1px solid #afb1b8;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-icon {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover .clients-icon {
+.clients-link:hover,
+.clients-link:focus {
+  border-color: var(--accent-color);
+}
+
+.clients-link:hover .clients-icon,
+.clients-link:focus .clients-icon {
   fill: var(--accent-color);
 }
 
@@ -520,8 +537,9 @@ p {
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.42px;
-
   color: rgba(255, 255, 255, 0.6);
+
+  transition: var(--transition-color);
 }
 
 .footer .link:hover,
@@ -550,6 +568,8 @@ p {
 .footer .socials-link {
   color: var(--primary-white-color);
   background-color: rgba(255, 255, 255, 0.1);
+
+  transition: var(--transition-bg-color);
 }
 
 .footer .socials-link:hover,
