--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,10 @@
   --primary-white-color: #ffffff;
   --hero-bg-color: rgba(47, 48, 58, 0.4);
   --footer-color: rgba(255, 255, 255, 0.6);
-  --transition-color: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  --transition-bg-color: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  /* transition */
+
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   /* grid-items */
 
@@ -58,7 +60,7 @@ p {
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid tomato;
+  /* outline: 1px solid tomato; */
 }
 
 .visually-hidden {
@@ -95,7 +97,7 @@ p {
 
 .logo-black {
   color: #000000;
-  transition: var(--transition-color);
+  transition: color 250ms var(--timing-function);
 }
 
 .logo-black:hover,
@@ -120,7 +122,7 @@ p {
 
   color: var(--title-text-color);
 
-  transition: var(--transition-color);
+  transition: color 250ms var(--timing-function);
 }
 
 .site-link::after {
@@ -131,8 +133,8 @@ p {
   display: block;
   width: 100%;
   height: 4px;
-
   border-radius: 2px;
+
   background-color: var(--accent-color);
   opacity: 0;
 }
@@ -182,7 +184,7 @@ p {
   line-height: 1.2;
   letter-spacing: 0.28px;
 
-  transition: var(--transition-color);
+  transition: color 250ms var(--timing-function);
 }
 
 .info-link:hover,
@@ -210,6 +212,7 @@ p {
 }
 
 .overlay {
+  position: relative;
   max-width: 1600px;
   height: 600px;
   background-repeat: no-repeat;
@@ -240,7 +243,6 @@ p {
 
   text-align: center;
   text-transform: uppercase;
-  outline: 1px sold white;
 }
 
 .hero-btn {
@@ -257,6 +259,9 @@ p {
 
   background-color: var(--accent-color);
   color: var(--primary-white-color);
+
+  transition: background-color 250ms var(--timing-function),
+    color 250ms var(--timing-function);
 }
 
 .hero-btn:hover,
@@ -268,9 +273,14 @@ p {
 .backdrop {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 50%;
+  width: 1600px;
   height: 1024px;
+
+  transform: translatex(-50%);
+
+  opacity: 1;
+  transition: opacity 250ms var(--timing-function);
 
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -280,17 +290,25 @@ p {
   pointer-events: none;
 }
 
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
 .modal {
   position: absolute;
   left: 50%;
   top: 50%;
-
   width: 528px;
   height: 581px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
   background-color: var(--primary-white-color);
 
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms var(--timing-function);
 }
 
 .batton-close {
@@ -302,8 +320,6 @@ p {
   top: 8px;
   left: 238px;
 }
-
-
 
 /* сітка для колекції з елементів */
 /* 
@@ -387,6 +403,8 @@ p {
 
 .directions-item {
   position: relative;
+
+  z-index: -1;
 }
 
 .directions-text {
@@ -480,9 +498,9 @@ p {
 
   background-color: var(--primary-white-color);
   color: #afb1b8;
- 
-  transition: var(--transition-color);
-  transition: var(--transition-bg-color);
+
+  transition: color 250ms var(--timing-function),
+    background-color 250ms var(--timing-function);
 }
 
 .socials-icon {
@@ -514,12 +532,12 @@ p {
   border-radius: 4px;
   border: 1px solid #afb1b8;
 
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms var(--timing-function);
 }
 
 .clients-icon {
   fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms var(--timing-function);
 }
 
 .clients-link:hover,
@@ -553,7 +571,7 @@ p {
 
 .logo-white {
   color: var(--primary-white-color);
-  transition: var(--transition-color);
+  transition: color 250ms var(--timing-function);
 }
 
 .logo-white:hover,
@@ -575,7 +593,7 @@ p {
   letter-spacing: 0.42px;
   color: rgba(255, 255, 255, 0.6);
 
-  transition: var(--transition-color);
+  transition: color 250ms var(--timing-function);
 }
 
 .footer .link:hover,
@@ -605,7 +623,7 @@ p {
   color: var(--primary-white-color);
   background-color: rgba(255, 255, 255, 0.1);
 
-  transition: var(--transition-bg-color);
+  transition: background-color 250ms var(--timing-function);
 }
 
 .footer .socials-link:hover,
@@ -642,6 +660,9 @@ p {
 
   background-color: #f5f4fa;
   color: var(--title-text-color);
+
+  transition: color 250ms var(--timing-function),
+    background-color 250ms var(--timing-function);
 }
 
 .item-btn + .item-btn {
@@ -691,10 +712,15 @@ p {
   background-color: var(--primary-white-color);
 }
 
-.link-hover:hover,
-.link-hover:focus {
+.portfolio-link:hover,
+.portfolio-link:focus {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+}
+
+.portfolio-image {
+  position: relative;
+  overflow: hidden;
 }
 
 .portfolio-title {
@@ -714,4 +740,32 @@ p {
   letter-spacing: 0.48px;
 
   color: var(--primary-text-color);
+}
+
+.portfolio-overlay {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 294px;
+  padding: 63px 24px;
+
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translatey(100%);
+  transition: transform 250ms var(--timing-function);
+}
+
+.overlay-text {
+  font-size: 18px;
+  font-style: 1.2;
+  font-weight: 400;
+  line-height: 1.55;
+  letter-spacing: 0.54px;
+
+  color: #fff;
+}
+
+.portfolio-link:hover .portfolio-overlay {
+  transform: translate(0%);
 }
