--- a/css/styles.css
+++ b/css/styles.css
@@ -100,8 +100,7 @@ p {
   transition: color 250ms var(--timing-function);
 }
 
-.logo-black:hover,
-.logo-black:focus {
+.logo-black:hover {
   color: var(--accent-color);
 }
 
@@ -574,8 +573,7 @@ p {
   transition: color 250ms var(--timing-function);
 }
 
-.logo-white:hover,
-.logo-white:focus {
+.logo-white:hover {
   color: var(--accent-color);
 }
 
